<resources>
    <string name="app_name">노선通</string>
    <string name="app_name_intro">안녕하세요 노선通 입니다</string>

    <string name="tv_title_dialog">Dialog</string>
    <string name="bt_app_close">app close</string>

    <string name="dialog_title_str_app_close">app close</string>
    <string name="dialog_msg_str_app_close">do you want to exit the app?</string>
    <string name="dialog_bt_str_cancel">cancel</string>
    <string name="dialog_bt_str_yes">yes</string>
    <string name="dialog_bt_str_no">no</string>

    <string name="tv_title_progressbar_circle">progress bar circle</string>
    <string name="progressbar_bt_show_str">Progress Bar Circle Show</string>
    <string name="progressbar_bt_hide_str">Progress Bar Circle Hide</string>

    <string name="tv_title_progressbar_horizontal">progress bar horizontal</string>
    <string name="bt_progressbar_horizontal">progress bar horizontal</string>

    <string name="query_hint">노선코드를 검색하세요</string>

    <string name="item_empty">검색된 내역이 없습니다.</string>

    <string name="title_receipt">실시간 접수 현황(영업소별)</string>
    <string name="title_waypoint">실시간 접수 현황(경유지별)</string>
    <string name="title_history">수정내역</string>
    <string name="title_carControl">차량관제</string>

    <string name="title_tendinous">건의함</string>

    <string name="history_billno">운송장번호:</string>
    <string name="history_agency">수정영업소:</string>
    <string name="history_date">수정일자:</string>
    <string name="history_category">수정일자:</string>
    <string name="history_content">수정내역:</string>

    <string name="way_con_1">출발지</string>
    <string name="way_con_2">도착지</string>
    <string name="way_con_3">발송</string>
    <string name="way_con_4">도착</string>

    <string name="way_dt_con_1">발송영업소</string>
    <string name="way_dt_con_2">품명</string>
    <string name="way_dt_con_3">포장</string>
    <string name="way_dt_con_4">수량(개)</string>
    <string name="way_dt_con_5">운임(원)</string>

    <string name="way_dt_summary">건수:0건, 수량:0개, 운임:0원</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hint_route">노선명을 입력하세요(필수)</string>
    <string name="hint_question">전화번호를 입력하세요</string>
    <string name="hint_answer">인증번호를 입력하세요</string>

    <string name="edit_save">저장</string>
    <string name="hint_tendinous">비방/비하/욕설은 자재해주세요</string>
    <string name="hint_tendinous_content">건의 및 에로사항을 입력하세요</string>
    <string name="hint_tendinous_linename">노선명을 입력하세요</string>
    <string name="hint_tendinous_drivername">관리자(기사)명을 입력하세요</string>
    <string name="hint_tendinous_phone">전화번호를 입력하세요</string>
    <string name="hint_tendinous_secert">지정된 담당자만 열람 가능합니다.</string>

</resources>