<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.popup.WaypointPopupActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:background="@color/grey_60"
        android:paddingTop="1dp"
        android:paddingLeft="3dp"
        >
        <ImageView
            android:id="@+id/stars"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:padding="3dp"
            android:src="@drawable/category_icon"
            android:layout_marginTop="6dp"
            >
        </ImageView>
        <TextView
            android:id="@+id/waypoint_det_top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="부곡터->청주우암"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_weight="1.5"
            android:id="@+id/waypoint_det_top_title2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="2022-05-03(수)"
            android:gravity="right"
            android:paddingTop="5dp"
            android:paddingRight="13dp"
            android:textColor="@color/orange"
            android:textSize="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:background="@drawable/gradient_bottom_gray"
        android:paddingTop="1dp"
        android:paddingLeft="3dp"
        android:layout_marginTop="5dp"
        >
        <ImageView

            android:layout_width="18dp"
            android:layout_height="18dp"
            android:padding="3dp"
            android:src="@drawable/bul"
            android:layout_marginTop="6dp"
            >
        </ImageView>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="영업소별/발송내역"
            android:textColor="@color/grey_90"
            android:textSize="16dp"
            android:layout_weight="1"
            />
        <TextView
            android:layout_weight="1.5"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:gravity="right"
            android:paddingTop="5dp"
            android:paddingRight="13dp"
            android:textColor="@color/grey_90"
            android:textSize="16dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/gradient_bottom_gray"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/waypoint_dt_summery_1"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/way_dt_summary"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_10">

        <TextView
            android:id="@+id/waypoint_adapter_title_1"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/way_dt_con_1"
            android:textAlignment="center"
            android:textColor="@color/grey_90"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/waypoint_adapter_title_2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/way_dt_con_2"
            android:textColor="@color/grey_90"
            android:textSize="14dp"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/waypoint_adapter_title_3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/way_dt_con_3"
            android:textColor="@color/grey_90"
            android:textSize="14dp"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/waypoint_adapter_title_4"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/way_dt_con_4"
            android:textColor="@color/grey_90"
            android:textSize="14dp"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textAlignment="center"

            android:layout_weight="1"/>
        <TextView
            android:id="@+id/waypoint_adapter_title_5"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/way_dt_con_5"
            android:textColor="@color/grey_90"
            android:textSize="14dp"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textAlignment="center"

            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="3dp"
        >

        <LinearLayout
            android:id="@+id/details_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            >


            <ProgressBar
                android:id="@+id/receipt_waypoint_det_progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:alpha="0.3"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/receipt_waypoint_det_recyceler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout_constrainedHeight="true"
                android:paddingBottom="3dp"
                android:scrollbars="vertical"
                android:nestedScrollingEnabled="false"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/waypoint_emp_list"
                android:text="수정 내역이 존재하지 않습니다"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@drawable/gradient_bottom"
                android:visibility="gone"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>